# live-markdown.nvim

./: .gitignore  Cargo.toml  README.md
lua/: live_markdown.lua  markdown_render.lua
plugin/: live_markdown.lua  markdown_render.lua
scripts/: build-nvim-module.sh
src/: lib.rs  main.rs  nvim.rs  protocol.rs  render.rs  server.rs  session.rs
src/assets/: preview.html
src/plugin/: autocmd.rs  commands.rs  mod.rs
