[package]
name = "markdown-render"
version = "0.1.0"
edition = "2024"

[lib]
name = "markdown_render_native"
crate-type = ["rlib", "cdylib"]

[dependencies]
async-stream = "0.3"
axum = "0.8"
nvim-oxi = { version = "0.6", features = ["neovim-0-10"] }
pulldown-cmark = { version = "0.13.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
